fixed Text area overflow in small devices.#28

--- a/style.css
+++ b/style.css
@@ -1,141 +1,144 @@
-@import url('https://fonts.googleapis.com/css2?family=Belanosima&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Belanosima&display=swap");
 
-
-:root{
-    --primary-color:#ffdffd;
-    --secondary-color:#212121;
+:root {
+  --primary-color: #ffdffd;
+  --secondary-color: #212121;
 }
-.dark-theme{
-    --primary-color:#212121;
-    --secondary-color:#ffdffd;
+.dark-theme {
+  --primary-color: #212121;
+  --secondary-color: #ffdffd;
 }
-
 
 body {
-    height: 100%;
-    width: 100%;
-    font-family: 'Belanosima', sans-serif;
-    background-color:var(--primary-color);
+  height: 100%;
+  width: 100%;
+  font-family: "Belanosima", sans-serif;
+  background-color: var(--primary-color);
 }
 
-#icon{
-margin-left: 30px;
-margin-top: 10px;
-width: 30px;
-height: 30px;
-cursor:pointer;
-
+#icon {
+  margin-left: 30px;
+  margin-top: 10px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
-.historyHeadline{
-    text-align:center;
+.historyHeadline {
+  text-align: center;
 }
-.clearHistory{
-    cursor: pointer;
+.clearHistory {
+  cursor: pointer;
 }
 
 .button {
-    padding: 20px;
-    margin: 0 3px;
-    border: 2px solid black;
-    border-radius: 42px;
-    font-weight: bold;
-    background-color: #81eded;
-    cursor: pointer;
-    width: 66px;
+  padding: 20px;
+  margin: 0 3px;
+  border: 2px solid black;
+  border-radius: 42px;
+  font-weight: bold;
+  background-color: #81eded;
+  cursor: pointer;
+  width: 66px;
 }
 
 .button.arithmetic {
-    background: #83b4b1;
-    font-size: 17px;
-    width: auto;
+  background: #83b4b1;
+  font-size: 17px;
+  width: auto;
 }
-
 
 /* Responsive styles for smaller screens */
 @media (max-width: 768px) {
-    .button {
-        padding: 10px;
-        margin: 0 2px;
-        font-size: 16px;
-        width: 45px;
-    }
+  .button {
+    padding: 10px;
+    margin: 0 2px;
+    font-size: 16px;
+    width: 45px;
+  }
 }
 
 .input {
-    height: 100%;
-    width: 100%;
-}
-
-@media (max-width: 768px) {
-    .input {
-        width: 80px;
-    }
+  height: 100%;
+  width: 100%;
 }
 
 .button:active {
-    background-color: black;
-    color: #81eded;
+  background-color: black;
+  color: #81eded;
 }
 
 .button:hover {
-    /* added a button hover effect */
-    background-color: #00b8b8;
+  /* added a button hover effect */
+  background-color: #00b8b8;
 }
 
 .row {
-    margin: 8px 0;
+  margin: 8px 0;
 }
 
 .row input {
-    width: 225px;
-    font-size: 20px;
-    margin: 0;
-    padding: 10px 38px;
-    border: 2px solid black;
-    border-radius: 9px;
+  width: 225px;
+  font-size: 20px;
+  margin: 0;
+  padding: 10px 38px;
+  border: 2px solid black;
+  border-radius: 9px;
 }
 
-@media (max-width: 768px) {
-    .input {
-        width: 160px;
-        font-size: 16px;
-    }
+/* Responsive styles for even smaller screens */
+@media (max-width: 300px) {
+  .row input {
+    width: 170px;
+  }
+}
+@media (max-width: 270px) {
+  .row input {
+    width: 130px;
+  }
 }
 
 .cal-outer-body {
-    border: 2px solid black;
-    border-radius: 30px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-    background-color: #F3DDF2;
-    margin-left: auto;
-    display: block;
-    max-width: 400px;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
+  border: 2px solid black;
+  border-radius: 30px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  background-color: #f3ddf2;
+  margin-left: auto;
+  display: block;
+  max-width: 400px;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .cal-inner-body {
-    padding: 10px;
+  padding: 10px;
 }
 
-.seperator{
-    /* add a seperator between the input and the buttons */
-    border: 0.5px solid black;
+.seperator {
+  /* add a seperator between the input and the buttons */
+  border: 0.5px solid black;
 }
 
 .shake {
-    animation: shake 0.5s ease-in-out;
+  animation: shake 0.5s ease-in-out;
 }
 
 @keyframes shake {
-    0%, 100% {
-        transform: translateX(0);
-    }
-    10%, 30%, 50%, 70%, 90% {
-        transform: translateX(-10px);
-    }
-    20%, 40%, 60%, 80% {
-        transform: translateX(10px);
-    }
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
